--- a/documenting-r.html
+++ b/documenting-r.html
@@ -32,7 +32,7 @@
   
   
 <link rel="prev" href="FixBug.html"/>
-<link rel="next" href="TestRCode.html"/>
+<link rel="next" href="testing-pre-release-r-versions.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -213,13 +213,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7.6" data-path="documenting-r.html"><a href="documenting-r.html#instructions-for-reporting-the-cran-policy-bugs-discussion-in-slack-random-channel"><i class="fa fa-check"></i><b>7.6</b> Instructions for reporting the CRAN policy bugs – discussion in slack (random channel)</a></li>
 <li class="chapter" data-level="7.7" data-path="documenting-r.html"><a href="documenting-r.html#see-also-5"><i class="fa fa-check"></i><b>7.7</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="8" data-path="TestRCode.html"><a href="TestRCode.html"><i class="fa fa-check"></i><b>8</b> Testing Pre-release R Versions</a><ul>
-<li class="chapter" data-level="8.1" data-path="TestRCode.html"><a href="TestRCode.html#where-to-test"><i class="fa fa-check"></i><b>8.1</b> Where to test?</a><ul>
-<li class="chapter" data-level="8.1.1" data-path="TestRCode.html"><a href="TestRCode.html#VM"><i class="fa fa-check"></i><b>8.1.1</b> Virtual machine</a></li>
+<li class="chapter" data-level="8" data-path="testing-pre-release-r-versions.html"><a href="testing-pre-release-r-versions.html"><i class="fa fa-check"></i><b>8</b> Testing Pre-release R Versions</a><ul>
+<li class="chapter" data-level="8.1" data-path="testing-pre-release-r-versions.html"><a href="testing-pre-release-r-versions.html#where-to-test"><i class="fa fa-check"></i><b>8.1</b> Where to test?</a><ul>
+<li class="chapter" data-level="8.1.1" data-path="testing-pre-release-r-versions.html"><a href="testing-pre-release-r-versions.html#VM"><i class="fa fa-check"></i><b>8.1.1</b> Virtual machine</a></li>
 </ul></li>
-<li class="chapter" data-level="8.2" data-path="TestRCode.html"><a href="TestRCode.html#what-can-you-test"><i class="fa fa-check"></i><b>8.2</b> What can you test?</a></li>
-<li class="chapter" data-level="8.3" data-path="TestRCode.html"><a href="TestRCode.html#writing-tests-for-r"><i class="fa fa-check"></i><b>8.3</b> Writing tests for R</a></li>
-<li class="chapter" data-level="8.4" data-path="TestRCode.html"><a href="TestRCode.html#benchmarks"><i class="fa fa-check"></i><b>8.4</b> Benchmarks</a></li>
+<li class="chapter" data-level="8.2" data-path="testing-pre-release-r-versions.html"><a href="testing-pre-release-r-versions.html#what-can-you-test"><i class="fa fa-check"></i><b>8.2</b> What can you test?</a></li>
+<li class="chapter" data-level="8.3" data-path="testing-pre-release-r-versions.html"><a href="testing-pre-release-r-versions.html#writing-tests-for-r"><i class="fa fa-check"></i><b>8.3</b> Writing tests for R</a></li>
+<li class="chapter" data-level="8.4" data-path="testing-pre-release-r-versions.html"><a href="testing-pre-release-r-versions.html#benchmarks"><i class="fa fa-check"></i><b>8.4</b> Benchmarks</a></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="r-core-developers.html"><a href="r-core-developers.html"><i class="fa fa-check"></i><b>9</b> R Core Developers</a></li>
 <li class="chapter" data-level="10" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html"><i class="fa fa-check"></i><b>10</b> Where to get help</a><ul>
@@ -362,7 +362,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
         </div>
       </div>
 <a href="FixBug.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="TestRCode.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="testing-pre-release-r-versions.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
