--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
-<!-- see https://plausible.io/forwards.github.io?page=%2Frdevguide%2F for analytics dashboard -->
-<script defer data-domain="forwards.github.io" src="https://plausible.io/js/plausible.js"></script>
+<!-- see https://plausible.io/forwards.github.io%2Frdevguide for analytics dashboard -->
+<script defer data-domain="forwards.github.io/rdevguide" src="https://plausible.io/js/plausible.js"></script>
 
 <script>
 // add little icons to top left of note box
