--- a/news-and-announcements.html
+++ b/news-and-announcements.html
@@ -24,7 +24,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2021-09-30" />
+<meta name="date" content="2021-10-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -286,7 +286,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="twitter" class="section level2">
 <h2><span class="header-section-number">11.5</span> Twitter</h2>
-<p>Follow <a href="https://twitter.com/R_dev_news">‘<span class="citation">(<span class="citeproc-not-found" data-reference-id="R_dev_news"><strong>???</strong></span>)</span>’</a> on Twitter for the <a href="https://developer.r-project.org/RSSfeeds.html">R development updates</a> and <a href="https://developer.r-project.org/Blog/public/">blog post</a> announcements.</p>
+<p>Follow <a href="https://twitter.com/R_dev_news">‘@R_dev_news’</a> on Twitter for the <a href="https://developer.r-project.org/RSSfeeds.html">R development updates</a> and <a href="https://developer.r-project.org/Blog/public/">blog post</a> announcements.</p>
 
 </div>
 </div>
