--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
-<!-- see https://plausible.io/forwards.github.io%2Frdevguide for analytics dashboard -->
-<script defer data-domain="forwards.github.io/rdevguide" src="https://plausible.io/js/plausible.js"></script>
+<!-- see https://plausible.io/contributor.r-project.org%2Frdevguide for analytics dashboard -->
+<script defer data-domain="contributor.r-project.org/rdevguide" src="https://plausible.io/js/plausible.js"></script>
 
 <script>
 // add little icons to top left of note box
