--- a/GetStart.html
+++ b/GetStart.html
@@ -283,7 +283,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ol style="list-style-type: decimal">
 <li><p>The binary builds of R for Windows can be downloaded and installed from <a href="https://cran.r-project.org/bin/windows/base/">here</a>. Along with the link to the latest stable release, this page also contains links to the binary builds of r-patched and r-devel.</p></li>
 <li><p>Click on the download links to download an executable installer.</p></li>
-<li><p>Select the language while installing, read the public license information, and select the destination location to start the installation. You will be prompted to select components at this stage: <code>User installation</code>, <code>32-bit User installation</code>, <code>64-bit User installation</code>, or <code>Custom installation</code>. The default option may be chosen for the questions from this step onwards to complete the installation.</p></li>
+<li><p>Select the language while installing, read the GNU general public license information, and select the destination location to start the installation. You will be prompted to select components at this stage: <code>User installation</code>, <code>32-bit User installation</code>, <code>64-bit User installation</code>, or <code>Custom installation</code>. The default option may be chosen for the questions from this step onwards to complete the installation.</p></li>
 </ol>
 </div>
 <div id="building-r-and-r-packages" class="section level2 hasAnchor">
